--- a/Maquetados/cus-14.html
+++ b/Maquetados/cus-14.html
@@ -15,6 +15,16 @@
     <div class="col s12 m8">
       <div class="card">
         <div class="card-content">
+      <div class="row">
+        <div class="col s12">
+            <ul class="tabs">
+              <li class="tab col s3"><a href="#test1">Pedidos Aceptados</a></li>
+              <li class="tab col s3"><a href="#test2">Pedidos Denegados</a></li>
+              <li class="tab col s3"><a href="#test3">Disabled Tab</a></li>
+              <li class="tab col s3"><a href="#test4">Test 4</a></li>
+            </ul>
+        </div>
+    <div id="test1" class="col s12">
           <span class="card-title">Estado De Pedidos</span>
           <!--contenido arribita -->
           <div class="row">
@@ -89,14 +99,19 @@
               </tbody>
             </table>
           <!-- fin de datatable -->
-        </div>
         <div class="card-action">
           <a href="#">This is a link</a>
           <a href="#">This is a link</a>
       	</div>
+        </div>
+    <div id="test2" class="col s12">Test 2</div>
+    <div id="test3" class="col s12">Test 3</div>
+    <div id="test4" class="col s12">Test 4</div>
+        </div>
     	</div>
 	</div>
   </div>
+</div>
 
   <!-- modale 01 [Detalle de los pedidos]-->
   <div id="modal1" class="modal bottom-sheet">
@@ -118,6 +133,7 @@
           $('.tooltipped').tooltip();
           $('.modal').modal();
           $('select').formSelect();
+          $('ul.tabs').tabs();
       });
       $('.dropdown-trigger').dropdown();
   </script>
